# nano

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.web  Epine.lua  Makefile  README.md  build.js  build.sh  build_nts_wasm.ps1  global.css  nts.wasm  package.json  rollup.config.js  tsconfig.json
.github/workflows/: c-cpp.yml  deploy.yml
bonus/web_playground/: .dockerignore  .eslintrc.json  .gitignore  package-lock.json  package.json  rollup.config.js  tsconfig.json
bonus/web_playground/public/: global.css  index.html
bonus/web_playground/src/: App.svelte  main.ts  model.ts  nano.ts  nts.d.ts  utils.ts
bonus/web_playground/src/components/: App.svelte  BasicNode.svelte  Button.svelte  ChipNode.svelte  ChipPin.svelte  CircuitEditor.svelte  Grow.svelte  HStack.svelte  InputNode.svelte  NtsEditor.svelte  Panel.svelte  Stack.svelte  VStack.svelte
bonus/web_playground/src/components/actions/: drag.ts
bonus/web_playground/src/model/: CustomCircuit.ts
bonus/web_playground/src/stores/: chips.ts
cli/: CMakeLists.txt
cli/include/: Relp.hpp  Repl.hpp
cli/src/: Repl.cpp  main.cpp
components/: 4001.nts  4008.nts  4013.nts  4013_ff.nts  4040.nts  4069.nts  4094.nts  4512.nts  4514.nts  adder.nts  adflipflop.nts  ajkflipflop.nts  and3.nts  buffer.nts  dflipflop.nts  dlatch.nts  mux.nts  nor.nts  reg1.nts  sum.nts  xor.nts
docs/: nts.puml  seq_nand.puml
include/: IComponent.hpp
lib/librtk/: .gitignore  Epine.lua  Makefile
lib/librtk/doc/classes/: Observable.plantuml  Subject.plantuml  Subscriber.plantuml  Subscription.plantuml  classes.plantuml
lib/librtk/doc/sequences/: lifetimeSubject.plantuml
lib/librtk/include/: BehaviorSubject.hpp  Observable.hpp  Observer.hpp  Operator.hpp  ReplaySubject.hpp  Subject.hpp  Subscribable.hpp  Subscriber.hpp  Subscription.hpp
lib/librtk/include/operator/: syncAll.hpp
lib/librtk/tests/Classes/BehaviorSubject/: BehaviorSubject_on_struct.cpp  BehaviorSubject_primitive_type.cpp  BehaviorSubject_thread.cpp
lib/librtk/tests/Classes/Observable/: Observable.cpp
lib/librtk/tests/Classes/ReplaySubject/: ReplaySubject_on_struct.cpp  (+2 more)
lib/librtk/tests/Operators/: syncAll.cpp
libnts/: CMakeLists.txt
libnts/components/: 4001.nts  4008.nts  4011.nts  4013.nts  4017.nts  4030.nts  4071.nts  4081.nts  atflipflop.nts  buffer.nts  hadder.nts  nand.nts  nand3.nts  nor.nts  or.nts  srlatch.nts  xnor.nts
libnts/include/nts/: ComboComponentFactory.hpp  Pinout.hpp
libnts/include/nts/components/: DecoderComponent.hpp  LoggerComponent.hpp  NotGate.hpp
libnts/mtl/tests/: option.cpp
libnts/src/: AComponent.cpp  Circuit.cpp  NtsComponentFactory.cpp
libnts/src/components/: AndGate.cpp  ConstComponent.cpp  LoggerComponent.cpp  RomComponent.cpp  ShiftRegisterComponent.cpp
libnts/tests/: 4040.cpp  logger.cpp
mtl/: CMakeLists.txt
mtl/include/mtl/: Option.hpp
mtl/tests/: option.cpp
nano/: CMakeLists.txt
nano/include/nts/: AComponent.hpp  AndGate.hpp  BuiltInComponentFactory.hpp  Circuit.hpp  ClockComponent.hpp  ConstComponent.hpp  IComponent.hpp  IComponentFactory.hpp  LoggerComponent.hpp  NotGate.hpp  NtsCircuit.hpp  NtsComponentFactory.hpp  RomComponent.hpp  StaticComponentFactory.hpp
nano/include/nts/components/: AndGate.hpp  ConstComponent.hpp  CounterComponent.hpp  DecoderComponent.hpp  RomComponent.hpp  SelectorComponent.hpp  ShiftRegisterComponent.hpp
nano/src/: AComponent.cpp  AndGate.cpp  BuiltInComponentFactory.cpp  Circuit.cpp  ClockComponent.cpp  ComboComponentFactory.cpp  ConstComponent.cpp  IComponent.cpp  IComponentFactory.cpp  IOComponentFactory.cpp  LoggerComponent.cpp  NotGate.cpp  NtsCircuit.cpp  Pinout.cpp  RomComponent.cpp  StaticComponentFactory.cpp  Tristate.cpp
nano/src/components/: CounterComponent.cpp  DecoderComponent.cpp  NotGate.cpp  SelectorComponent.cpp  ShiftRegisterComponent.cpp
nano/tests/: 4008.cpp  4017.cpp  4040.cpp  4514.cpp  circuit.cpp  latches.cpp  logger.cpp  nts_utils.cpp  nts_utils.hpp  rom.cpp
nts/: CMakeLists.txt
nts/include/: AChip.hpp  AComponent.hpp  AndGate.hpp  BuiltInComponentFactory.hpp  Chip.hpp  Circuit.hpp  ClockComponent.hpp  ConstComponent.hpp  DynamicPinoutBuffer.hpp  Generator.hpp  ICircuit.hpp  IComponent.hpp  IComponentFactory.hpp  IInputComponent.hpp  IOComponentFactory.hpp  IOutputComponent.hpp  IPinComponent.hpp  InputComponent.hpp  LoggerComponent.hpp  MainCircuit.hpp  MultiComponentFactory.hpp  NTSCircuit.hpp  NTSComponentFactory.hpp  NodeComponent.hpp  NorGate.hpp  NotGate.hpp  OutputComponent.hpp  Pin.hpp  PullComponent.hpp  RomComponent.hpp  StaticPinoutBuffer.hpp  Tristate.hpp  test.hpp  test_add.hpp
nts/include/nts/: AndGate.hpp  BuiltInComponentFactory.hpp  Circuit.hpp  ComboComponentFactory.hpp  ConstComponent.hpp  IComponent.hpp  IComponentFactory.hpp  NotGate.hpp  NtsCircuit.hpp  NtsComponentFactory.hpp  Pinout.hpp  RomComponent.hpp  StaticComponentFactory.hpp  Tristate.hpp
nts/src/: AComponent.cpp  AndGate.cpp  BuiltInComponentFactory.cpp  Chip.cpp  Circuit.cpp  ClockComponent.cpp  ConstComponent.cpp  DynamicPinoutBuffer.cpp  IComponent.cpp  IComponentFactory.cpp  InputComponent.cpp  LoggerComponent.cpp  MainCircuit.cpp  MultiComponentFactory.cpp  NTSCircuit.cpp  NTSComponentFactory.cpp  NodeComponent.cpp  NorGate.cpp  NotGate.cpp  NtsCircuit.cpp  NtsComponentFactory.cpp  OutputComponent.cpp  Pin.cpp  Pinout.cpp  PullComponent.cpp  RomComponent.cpp  StaticComponentFactory.cpp  StaticPinoutBuffer.cpp  Tristate.cpp  test.cpp
src/: App.svelte  main.cpp  main.ts  model.ts  nano.ts  nts.d.ts
src/components/: BasicNode.svelte  ChipNode.svelte  ChipPicker.svelte  CircuitEditor.svelte  PinNode.svelte  Stack.svelte
src/components/actions/: drag.ts
src/stores/: chips.ts
tests/: 4008.cpp  4013.cpp  4017.cpp  CMakeLists.txt  assert_truth.hpp  builtin_gates.cpp  circuit.cpp  clock.cpp  graph.cpp  latch.cpp  latches.cpp  logger.cpp  logic_gates.cpp  nts_components.cpp  nts_gates.cpp  nts_utils.cpp  nts_utils.hpp  ntsparser.cpp  parser.cpp  rom.cpp  sr_latch.cpp
tests/nts/Component/: Component.cpp
wasm_demo/: index.html
(+4 files in other folders)
